--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -972,6 +972,10 @@ h3{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.ease-out{
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+
 .placeholder\:text-black\/20::-moz-placeholder{
   color: rgb(0 0 0 / 0.2);
 }
@@ -993,6 +997,11 @@ h3{
 .hover\:text-yellow-400:hover{
   --tw-text-opacity: 1;
   color: rgb(250 204 21 / var(--tw-text-opacity));
+}
+
+.hover\:text-rose-500:hover{
+  --tw-text-opacity: 1;
+  color: rgb(244 63 94 / var(--tw-text-opacity));
 }
 
 .focus\:outline-none:focus{
